add spliceAI support